--- a/package.json
+++ b/package.json
@@ -31,39 +31,39 @@
   },
   "private": true,
   "dependencies": {
-    "async": "2.6.0",
+    "async": "^2.6.1",
     "box-view": "2.0.0",
-    "lodash": "4.17.4",
+    "lodash": "^4.17.11",
     "pkginfo": "0.4.1"
   },
   "devDependencies": {
     "arrow": "*",
     "babel-cli": "6.26.0",
-    "babel-core": "6.26.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-stage-2": "6.24.1",
-    "cross-env": "5.1.1",
-    "npm-check": "5.5.2",
-    "nyc": "11.3.0",
-    "retire": "^2.0.0",
-    "rimraf": "2.6.2",
-    "sinon": "2.1.0",
-    "snazzy": "7.0.0",
-    "standard": "10.0.3",
-    "tap": "11.0.0",
-    "tap-mocha-reporter": "3.0.6",
+    "babel-core": "^6.26.3",
     "babel-istanbul": "^0.12.1",
     "babel-polyfill": "^6.13.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "cross-env": "^5.2.0",
+    "eslint-config-standard": "^12.0.0",
     "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-jshint": "^2.0.0",
+    "grunt-kahvesi": "^1.0.2",
     "grunt-mocha-test": "^0.13.2",
-    "mocha": "4.0.1",
-    "should": "13.1.3",
-    "eslint-config-standard": "11.0.0-beta.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-kahvesi": "^0.1.0",
-    "babel-preset-env": "1.6.1",
-    "request": "2.83.0"
+    "mocha": "^5.2.0",
+    "npm-check": "^5.9.0",
+    "nyc": "^13.1.0",
+    "request": "^2.88.0",
+    "retire": "^2.0.0",
+    "rimraf": "2.6.2",
+    "should": "^13.2.3",
+    "sinon": "^7.0.0",
+    "snazzy": "^8.0.0",
+    "standard": "^12.0.1",
+    "tap": "^12.0.1",
+    "tap-mocha-reporter": "^3.0.7"
   },
   "scripts": {
     "start": "appc run",
